POP/src/grammar/programParser.java
// Generated from /Users/bdludwig/Dropbox/workspace/VL_POP/src/grammar/program.g4 by ANTLR 4.7.2
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class programParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, NUMBER=2, TEXT=3, JSON=4, OPERATOR_ADD=5, OPERATOR_SUB=6, OPERATOR_MULT=7, 
		OPERATOR_DIV=8, OPEN_BLOCK=9, CLOSE_BLOCK=10, ASSIGNMENT=11, MAPDECL=12, 
		DOUBLEDECL=13, TEXTDECL=14, BOOLDECL=15, PRINT=16, LISTENERDECL=17, FUNCTIONDECL=18, 
		PROCDECL=19, RETURN=20, OPEN_BRACKET=21, CLOSE_BRACKET=22, COMMA=23, DOT=24, 
		PROGRAM=25, CALL=26, SMALLER=27, GREATER=28, IF=29, ELSE=30, AND=31, OR=32, 
		NOT=33, EVENT=34, WHILE=35, TRUE=36, FALSE=37, GET=38, THREAD=39, WAIT=40, 
		SEMICOLON=41, VARIABLE=42;
	public static final int
		RULE_prule = 0, RULE_block = 1, RULE_statement = 2, RULE_mapdecl = 3, 
		RULE_booldecl = 4, RULE_doubledecl = 5, RULE_textdecl = 6, RULE_parameterdecl = 7, 
		RULE_fundecl = 8, RULE_print = 9, RULE_call = 10, RULE_st_if = 11, RULE_logexpression = 12, 
		RULE_condition = 13, RULE_st_while = 14, RULE_st_return = 15, RULE_wait_for = 16, 
		RULE_returntype = 17, RULE_assignment = 18, RULE_expression = 19, RULE_factor = 20, 
		RULE_get = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"prule", "block", "statement", "mapdecl", "booldecl", "doubledecl", "textdecl", 
			"parameterdecl", "fundecl", "print", "call", "st_if", "logexpression", 
			"condition", "st_while", "st_return", "wait_for", "returntype", "assignment", 
			"expression", "factor", "get"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'{'", "'}'", 
			"'='", "'MAP'", "'DOUBLE'", "'TEXT'", "'BOOLEAN'", "'PRINT'", "'LISTENER'", 
			"'FUN'", "'PROC'", "'RETURN'", "'('", "')'", "','", "'.'", "'PROGRAM'", 
			"'CALL'", "'<'", "'>'", "'IF'", "'ELSE'", "'&'", "'|'", "'!'", "'EVENT'", 
			"'WHILE'", "'TRUE'", "'FALSE'", "'GET'", "'THREAD'", "'WAIT'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "NUMBER", "TEXT", "JSON", "OPERATOR_ADD", "OPERATOR_SUB", 
			"OPERATOR_MULT", "OPERATOR_DIV", "OPEN_BLOCK", "CLOSE_BLOCK", "ASSIGNMENT", 
			"MAPDECL", "DOUBLEDECL", "TEXTDECL", "BOOLDECL", "PRINT", "LISTENERDECL", 
			"FUNCTIONDECL", "PROCDECL", "RETURN", "OPEN_BRACKET", "CLOSE_BRACKET", 
			"COMMA", "DOT", "PROGRAM", "CALL", "SMALLER", "GREATER", "IF", "ELSE", 
			"AND", "OR", "NOT", "EVENT", "WHILE", "TRUE", "FALSE", "GET", "THREAD", 
			"WAIT", "SEMICOLON", "VARIABLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "program.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public programParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PruleContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(programParser.PROGRAM, 0); }
		public TerminalNode VARIABLE() { return getToken(programParser.VARIABLE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public PruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).enterPrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).exitPrule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof programVisitor ) return ((programVisitor<? extends T>)visitor).visitPrule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PruleContext prule() throws RecognitionException {
		PruleContext _localctx = new PruleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(PROGRAM);
			setState(45);
			match(VARIABLE);
			setState(46);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode OPEN_BLOCK() { return getToken(programParser.OPEN_BLOCK, 0); }
		public TerminalNode CLOSE_BLOCK() { return getToken(programParser.CLOSE_BLOCK, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof programVisitor ) return ((programVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(OPEN_BLOCK);
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(49);
				statement();
				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAPDECL) | (1L << DOUBLEDECL) | (1L << TEXTDECL) | (1L << BOOLDECL) | (1L << PRINT) | (1L << LISTENERDECL) | (1L << FUNCTIONDECL) | (1L << PROCDECL) | (1L << RETURN) | (1L << CALL) | (1L << IF) | (1L << EVENT) | (1L << WHILE) | (1L << THREAD) | (1L << WAIT) | (1L << VARIABLE))) != 0) );
			setState(54);
			match(CLOSE_BLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(programParser.SEMICOLON, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public MapdeclContext mapdecl() {
			return getRuleContext(MapdeclContext.class,0);
		}
		public BooldeclContext booldecl() {
			return getRuleContext(BooldeclContext.class,0);
		}
		public DoubledeclContext doubledecl() {
			return getRuleContext(DoubledeclContext.class,0);
		}
		public TextdeclContext textdecl() {
			return getRuleContext(TextdeclContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public St_whileContext st_while() {
			return getRuleContext(St_whileContext.class,0);
		}
		public St_returnContext st_return() {
			return getRuleContext(St_returnContext.class,0);
		}
		public FundeclContext fundecl() {
			return getRuleContext(FundeclContext.class,0);
		}
		public St_ifContext st_if() {
			return getRuleContext(St_ifContext.class,0);
		}
		public Wait_forContext wait_for() {
			return getRuleContext(Wait_forContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof programVisitor ) return ((programVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARIABLE:
				{
				setState(56);
				assignment();
				}
				break;
			case MAPDECL:
				{
				setState(57);
				mapdecl();
				}
				break;
			case BOOLDECL:
				{
				setState(58);
				booldecl();
				}
				break;
			case DOUBLEDECL:
				{
				setState(59);
				doubledecl();
				}
				break;
			case TEXTDECL:
				{
				setState(60);
				textdecl();
				}
				break;
			case PRINT:
				{
				setState(61);
				print();
				}
				break;
			case CALL:
			case EVENT:
			case THREAD:
				{
				setState(62);
				call();
				}
				break;
			case WHILE:
				{
				setState(63);
				st_while();
				}
				break;
			case RETURN:
				{
				setState(64);
				st_return();
				}
				break;
			case LISTENERDECL:
			case FUNCTIONDECL:
			case PROCDECL:
				{
				setState(65);
				fundecl();
				}
				break;
			case IF:
				{
				setState(66);
				st_if();
				}
				break;
			case WAIT:
				{
				setState(67);
				wait_for();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(70);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapdeclContext extends ParserRuleContext {
		public TerminalNode MAPDECL() { return getToken(programParser.MAPDECL, 0); }
		public TerminalNode VARIABLE() { return getToken(programParser.VARIABLE, 0); }
		public MapdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mapdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).enterMapdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).exitMapdecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof programVisitor ) return ((programVisitor<? extends T>)visitor).visitMapdecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MapdeclContext mapdecl() throws RecognitionException {
		MapdeclContext _localctx = new MapdeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mapdecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(MAPDECL);
			setState(73);
			match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooldeclContext extends ParserRuleContext {
		public TerminalNode BOOLDECL() { return getToken(programParser.BOOLDECL, 0); }
		public TerminalNode VARIABLE() { return getToken(programParser.VARIABLE, 0); }
		public BooldeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booldecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).enterBooldecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).exitBooldecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof programVisitor ) return ((programVisitor<? extends T>)visitor).visitBooldecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooldeclContext booldecl() throws RecognitionException {
		BooldeclContext _localctx = new BooldeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_booldecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(BOOLDECL);
			setState(76);
			match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DoubledeclContext extends ParserRuleContext {
		public TerminalNode DOUBLEDECL() { return getToken(programParser.DOUBLEDECL, 0); }
		public TerminalNode VARIABLE() { return getToken(programParser.VARIABLE, 0); }
		public DoubledeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doubledecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).enterDoubledecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).exitDoubledecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof programVisitor ) return ((programVisitor<? extends T>)visitor).visitDoubledecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoubledeclContext doubledecl() throws RecognitionException {
		DoubledeclContext _localctx = new DoubledeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_doubledecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(DOUBLEDECL);
			setState(79);
			match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextdeclContext extends ParserRuleContext {
		public TerminalNode TEXTDECL() { return getToken(programParser.TEXTDECL, 0); }
		public TerminalNode VARIABLE() { return getToken(programParser.VARIABLE, 0); }
		public TextdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).enterTextdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).exitTextdecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof programVisitor ) return ((programVisitor<? extends T>)visitor).visitTextdecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextdeclContext textdecl() throws RecognitionException {
		TextdeclContext _localctx = new TextdeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_textdecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(TEXTDECL);
			setState(82);
			match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterdeclContext extends ParserRuleContext {
		public MapdeclContext mapdecl() {
			return getRuleContext(MapdeclContext.class,0);
		}
		public BooldeclContext booldecl() {
			return getRuleContext(BooldeclContext.class,0);
		}
		public DoubledeclContext doubledecl() {
			return getRuleContext(DoubledeclContext.class,0);
		}
		public TextdeclContext textdecl() {
			return getRuleContext(TextdeclContext.class,0);
		}
		public ParameterdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).enterParameterdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).exitParameterdecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof programVisitor ) return ((programVisitor<? extends T>)visitor).visitParameterdecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterdeclContext parameterdecl() throws RecognitionException {
		ParameterdeclContext _localctx = new ParameterdeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parameterdecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MAPDECL:
				{
				setState(84);
				mapdecl();
				}
				break;
			case BOOLDECL:
				{
				setState(85);
				booldecl();
				}
				break;
			case DOUBLEDECL:
				{
				setState(86);
				doubledecl();
				}
				break;
			case TEXTDECL:
				{
				setState(87);
				textdecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FundeclContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(programParser.VARIABLE, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(programParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(programParser.CLOSE_BRACKET, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode FUNCTIONDECL() { return getToken(programParser.FUNCTIONDECL, 0); }
		public ReturntypeContext returntype() {
			return getRuleContext(ReturntypeContext.class,0);
		}
		public TerminalNode PROCDECL() { return getToken(programParser.PROCDECL, 0); }
		public TerminalNode LISTENERDECL() { return getToken(programParser.LISTENERDECL, 0); }
		public List<ParameterdeclContext> parameterdecl() {
			return getRuleContexts(ParameterdeclContext.class);
		}
		public ParameterdeclContext parameterdecl(int i) {
			return getRuleContext(ParameterdeclContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(programParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(programParser.COMMA, i);
		}
		public FundeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fundecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).enterFundecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).exitFundecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof programVisitor ) return ((programVisitor<? extends T>)visitor).visitFundecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FundeclContext fundecl() throws RecognitionException {
		FundeclContext _localctx = new FundeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fundecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTIONDECL:
				{
				setState(90);
				match(FUNCTIONDECL);
				setState(91);
				returntype();
				}
				break;
			case PROCDECL:
				{
				setState(92);
				match(PROCDECL);
				}
				break;
			case LISTENERDECL:
				{
				setState(93);
				match(LISTENERDECL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(96);
			match(VARIABLE);
			setState(97);
			match(OPEN_BRACKET);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAPDECL) | (1L << DOUBLEDECL) | (1L << TEXTDECL) | (1L << BOOLDECL))) != 0)) {
				{
				setState(98);
				parameterdecl();
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(99);
					match(COMMA);
					setState(100);
					parameterdecl();
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(108);
			match(CLOSE_BRACKET);
			setState(109);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(programParser.PRINT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public LogexpressionContext logexpression() {
			return getRuleContext(LogexpressionContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof programVisitor ) return ((programVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(PRINT);
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(112);
				expression();
				}
				break;
			case 2:
				{
				setState(113);
				logexpression();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACKET() { return getToken(programParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(programParser.CLOSE_BRACKET, 0); }
		public TerminalNode CALL() { return getToken(programParser.CALL, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(programParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(programParser.VARIABLE, i);
		}
		public TerminalNode THREAD() { return getToken(programParser.THREAD, 0); }
		public TerminalNode EVENT() { return getToken(programParser.EVENT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(programParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(programParser.COMMA, i);
		}
		public List<TerminalNode> DOT() { return getTokens(programParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(programParser.DOT, i);
		}
		public CallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).enterCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof programListener ) ((programListener)listener).exitCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof programVisitor ) return ((programVisitor<? extends T>)visitor).visitCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallContext call() throws RecognitionException {
		CallContext _localctx = new CallContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CALL:
				{
				setState(116);
				match(CALL);
				setState(117);
				match(VARIABLE);
				}
				break;
			case THREAD:
				{
				setState(118);
				match(THREAD);
				setState(119);
				match(VARIABLE);
				}
				break;
			case EVENT:
				{
				setState(120);
				match(EVENT);
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VARIABLE) {
					{
					setState(121);
					match(VARIABLE);
					setState(126);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==DOT) {
						{
						{
						setState(122);
						match(DOT);
						setState(123);
						match(VARIABLE);
						}
						}
						setState(128);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(133);
			match(OPEN_BRACKET);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << TEXT) | (1L << JSON) | (1L << OPEN_BRACKET) | (1L << TRUE) | (1L << FALSE) | (1L << GET) | (1L << VARIABLE))) != 0)) {
				{
				setState(134);
				expression();
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(135);
					match(COMMA);
					setState(136);
					expression();
					}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(144);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
